# Yozakura

./: LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: model-support-survey.yml
.github/workflows/: standalone.yml
docs/: BENCHMARKS.md  MEMORY.md  MODEL_BUNDLE.md  STANDALONE.md  layer-cuda.md  model-support.md
notebooks/: Yozakura_Colab_Demo.ipynb
packaging/: yozakura.spec  yozakura_entry.py
scripts/: build-standalone.py
src/yozakura/: __init__.py  adapters.py  archive.py  benchmark.py  builder.py  checkpoint.py  cli.py  codec.py  model_bundle.py  out_of_core.py  runtime.py
tests/: test_adapters.py  test_archive.py  test_checkpoint.py  test_gpt2_conv1d.py  test_layer_cuda_cli.py  test_out_of_core_runtime.py  test_runtime_workspace.py  test_tiered_runtime.py
