[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yozakura-sun"
version = "0.1.0"
description = "Portable hypernetwork delta archives for CPU/GPU Transformers inference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
dependencies = [
  "torch>=2.3",
  "transformers>=4.51",
  "safetensors>=0.4.5",
  "huggingface-hub>=0.26",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
yozakura = "yozakura.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/yozakura"]
